# scratchpad

./: '  .gitignore  README.md  components.json  package.json  tsconfig.json
api/: pyproject.toml
api/src/api/: __init__.py  env.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.css  App.tsx  AppSidebar.tsx  KeyPrefix.tsx  UserSettings.tsx  main.tsx  platform.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: editor.rs  lib.rs  main.rs  setup.rs
desktop/src/api/: auth.tsx  document.tsx
desktop/src/components/: app-sidebar2.tsx  login-form.tsx  register-form.tsx  settings-dialog.tsx
desktop/src/lib/: files.ts  stronghold.ts
desktop/src/pages/: SearchPage.tsx
desktop/src/routes/: auth_guard.tsx  index.tsx  register.tsx
server/: main.py  pyproject.toml
server/app/: main.py
server/app/common/: text.py
server/app/logging/: __init__.py  settings.py
server/app/models/: auth.py  document.py  file_search.py  friend.py  search.py  summarize.py
server/app/router/: __init__.py  dependencies.py
server/app/router/endpoints/: document.py  file_Search.py  file_search.py  friend.py  login.py  register.py  search.py  summarize.py
server/app/router/middleware/: http.py
src/: App.css  App.tsx  Tiptap.tsx  main.tsx  toggle.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+75 files in other folders)
