[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "openai>=1.58.1",
    "pinecone[grpc]>=5.4.2",
    "ruff>=0.8.3",
    "supabase>=2.10.0",
    "tiktoken>=0.6.0"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
